--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-1.85MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
-  - {name: 🇺🇸 美国-348.4KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.74MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-186.5KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇭🇰 香港-921.8KB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.66MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-314.4KB/s(Youtube:不良林), server: 36.134.53.194, port: 26060, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 未知国家-2.23MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇸🇬 新加坡-3.71MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-3.13MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
       - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
       - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
       - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
       - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
       - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
       - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
       - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
