--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-186.5KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇭🇰 香港-921.8KB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.66MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-314.4KB/s(Youtube:不良林), server: 36.134.53.194, port: 26060, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-2.23MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.13MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.74MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇭🇰 香港-318.3KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.79MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.81MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.52MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-16.28MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.71MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.30MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
-      - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
-      - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
-      - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
-      - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
-      - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
-      - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-921.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.4KB/s(Youtube:不良林)
-      - 未知国家-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
